# DownloadV1

./: .dockerignore  .gitignore  .windsurfrules  ARCHITECTURAL_ANALYSIS.md  Dockerfile  REACT_MIGRATION_PLAN.md  README.md  app.py  cleanup_manager.py  cleanup_script.py  common.py  cookies.txt  download.py  downloads_state.json  fly.toml  fly_commands.md  logger.py  metrics.py  models.py  pyproject.toml  requirements.txt  requirements.txt.bak  start.sh  state_manager.py  state_storage.py  tasks.py  test_app.py  test_download.py  test_models.py  utils.py  youtube.com_cookies.txt
.github/workflows/: fly.yml
.poetry/backports.tarfile-1.2.0.dist-info/: RECORD
.poetry/build-1.2.2.post1.dist-info/: RECORD
.poetry/cachecontrol-0.14.2.dist-info/: RECORD
.poetry/certifi-2024.12.14.dist-info/: RECORD
.poetry/cffi-1.17.1.dist-info/: RECORD
.poetry/charset_normalizer-3.4.1.dist-info/: RECORD
.poetry/cleo-2.1.0.dist-info/: RECORD
.poetry/crashtest-0.4.1.dist-info/: RECORD
.poetry/distlib-0.3.9.dist-info/: RECORD
.poetry/dulwich-0.22.7.dist-info/: RECORD
.poetry/fastjsonschema-2.21.1.dist-info/: RECORD
.poetry/filelock-3.17.0.dist-info/: RECORD
.poetry/idna-3.10.dist-info/: RECORD
.poetry/importlib_metadata-8.6.1.dist-info/: RECORD
.poetry/installer-0.7.0.dist-info/: RECORD
api/: cancel.py
scripts/: download_ffmpeg.sh
services/: cancellation_service.py
static/: style.css
tests/: conftest.py  test_app.py  test_cleanup_manager.py  test_download.py  test_models.py  test_state_storage.py  test_utils.py
views/: error.html  index.html
(+24 files in other folders)
