[tool.poetry]
name = "download-manager"
version = "0.1.0"
description = "Video Download Manager"
authors = ["Developer"]

[tool.poetry.dependencies]
python = "^3.9"
ffmpeg-python = "0.2.0"
requests = "2.31.0"
uvicorn = "0.23.2"
starlette = "0.35.1"
jinja2 = "3.1.2"
python-multipart = "0.0.6"
psutil = "5.9.7"
yt-dlp = "2024.3.10"
vimeo-downloader = "0.4.1"
tqdm = "4.66.2"
fastapi = "0.109.1"
httpx = "0.26.0"
urllib3 = "<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
